# Insta-Chatbot-ver2

./: PRUEBA13_token_costs.csv  change_url_cloudinary.py  change_url_imgur.py  chatgpt.py  chatgpt_langchain.py  config.py  create_caption.py  create_idea.py  create_image.py  create_video.py  decision_tree.db  decision_tree.db-journal  decision_tree.py  main.py  pyproject.toml  saving_message_history.py  text  texts  token_usage.py  upload_instagram.py  upload_instagram_2.py
chatbot_django_final/chatbot_project/: .env  db.sqlite3  manage.py
chatbot_django_final/chatbot_project/chatbot_insta/: apps.py  models.py  urls.py  views.py
chatbot_django_final/chatbot_project/chatbot_insta/migrations/: 0001_initial.py
chatbot_django_final/chatbot_project/chatbot_insta/templates/: base.html  chat.html  home.html  signin.html  signup.html  styles.css
chatbot_django_final/chatbot_project/chatbot_project/: settings.py  urls.py  wsgi.py
chatbot_django_final/chatbot_project/chatbotpf/: chatgpt_langchain.py  config.py  create_idea.py  create_image.py  token_usage.py  upload_instagram.py
