[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
openai = "^0.27.7"
replicate = "^0.8.3"
bs4 = "^0.0.1"
cloudinary = "^1.33.0"
imgurpython = "^1.1.7"
Pillow = "^9.5.0"
instabot = "^0.117.0"
pexels = "^0.0.11"
gTTS = "^2.3.2"
pydub = "^0.25.1"
ffmpeg = "1.4"
pandas = "^2.0.2"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"